:bug: - fix: fix a bug where horizontal toolbars could be rendered with incorrect styling on mobile devices

--- a/src/components/toolbar/toolbar.scss
+++ b/src/components/toolbar/toolbar.scss
@@ -6,6 +6,9 @@
       @content;
     }
   }
+  &--direction-horizontal:not(#{&}--direction-responsive) {
+    @content;
+  }
 }
 
 @mixin vertical {
